2021-10-09  Omar Polo  <op@omarpolo.com>

	* contrib/gencert: add gencert, a simple script to generate self-signed certs

2021-10-04  Omar Polo  <op@omarpolo.com>

	* regress/lib.sh (raw): reduced the timeout time for single checks from 30 to 10 seconds

	* regress/runtime: regression test restructured.  still implemented as a set of POSIX-scripts

2021-10-02  Omar Polo  <op@omarpolo.com>

	* server.c (client_read): reworked the internal structure.  Now we leverage libevent' bufferevents more.
	(cgi_read): be more strict with CGI scripts: don't pass through illegal CGI responses.

2021-09-26  Omar Polo  <op@omarpolo.com>

	* fcgi.c (fcgi_req): the FastCGI implementation is fully asynchronous

2021-09-24  Omar Polo  <op@omarpolo.com>

	* configure (VERSION): 1.7.4 tagged

	* server.c (check_for_cgi): fix out-of-bound access, found with lots of help from cage, thanks!

2021-09-19  Omar Polo  <op@omarpolo.com>

	* sandbox.c (gmid_create_landlock_rs): [linux] use landlock on the server and logger process to reduce the fs access

	* configure (VERSION): 1.7.3 tagged

2021-09-17  Omar Polo  <op@omarpolo.com>

	* log.c (logger_main): fix syslog logging on FreeBSD

2021-08-24  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): don't crash on -n without -c

2021-07-29  Anna “CyberTailor”

	* gmid.1: document logging, openssl key generation example, spelling/grammar and crosslinks

2021-07-27  Omar Polo  <op@omarpolo.com>

	* server.c (check_path): allow symlinks

2021-07-23  Omar Polo  <op@omarpolo.com>

	* sandbox.c: seccomp allow fstat64 (used by glibc an aarch64).  Reported by pine, thanks!

2021-07-19  Omar Polo  <op@omarpolo.com>

	* gmid.c (setup_configless): unbreak configless mode

2021-07-13  Anna “CyberTailor”

	* parse.y (yyerror): error and warning messages are prefixed with "error:" and "warning:"
	(yywarn): fix off-by-one line number in warnings

2021-07-11  Omar Polo  <op@omarpolo.com>

	* configure (VERSION): 1.7.1 tagged

2021-07-11  Anna “CyberTailor”
