@@ -62,6 +62,8 @@ in the config file if present.
 Stays and logs on the foreground.
 .It Fl n
 Check that the configuration is valid, but don't start the server.
+If specified two or more time, dump the configuration in addition to
+verify it.
 .It Fl P Pa pidfile
 Write daemon's pid to the given location.
 .Ar pidfile
